--- a/backend/my_project/requirements.txt
+++ b/backend/my_project/requirements.txt
@@ -2,6 +2,9 @@
 Django==5.2.4
 djangorestframework==3.15.2
 
+# Environment variables
+python-dotenv>=1.0.0
+
 # Swagger/OpenAPI Documentation
 drf-yasg==1.21.7
 
