--- a/backend/my_project/requirements.txt
+++ b/backend/my_project/requirements.txt
@@ -2,6 +2,12 @@
 Django==5.2.4
 djangorestframework==3.15.2
 
+# Production server
+gunicorn>=21.0.0
+
+# Static files serving in production
+whitenoise>=6.6.0
+
 # Environment variables
 python-dotenv>=1.0.0
 
