--- a/backend/my_project/requirements.txt
+++ b/backend/my_project/requirements.txt
@@ -38,6 +38,9 @@ psycopg2>=2.9.7
 # HTML parsing (for HTML -> text indexing)
 beautifulsoup4>=4.12.0
 
+# Brevo (Sendinblue) email service
+sib-api-v3-sdk>=7.6.0
+
 # Optional: Additional image processing
 # scikit-image>=0.21.0
 
